# lemon-stack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  setup.sh
.github/workflows/: ci.yml
apps/: README.md
apps/admin-ui/: CLAUDE.md  deploy.conf  docker-compose.yml
apps/claude-runner/: README.md  (+4 more)
claude/: CLAUDE.md.template  settings.json.template
cli/lemon/: README.md  lemon  pyproject.toml
cli/lemon/lemon_cli/: config.py  main.py
cli/lemon/lemon_cli/commands/: app_ls.py  app_status.py  auth_check.py  backup_status.py  bao_keys.py  bao_status.py  caddy_routes.py  ci_cmd.py  deploy_check.py  docker_ls.py  gh_status.py  logs.py  n8n_cmd.py  plane_cmd.py  port_audit.py  secrets_status.py  server_health.py  smoke.py  verify.py
cli/lemon/lemon_cli/sources/: bao.py  caddy.py  docker.py  filesystem.py  http_check.py  ports.py
deploy/: README.md  bao-fetch.sh.template  deploy.sh.template  ports.example.json
docs/: adding-apps.md  architecture.md  authentik-bootstrap.md  backup-restore.md  openbao-bootstrap.md  pipeline-deep-dive.md  troubleshooting.md  upgrading.md
hooks/: pre-commit
scripts/: check-structural-sections.sh  check-templates.sh  drift-check.sh  identifiers.example.env  identifiers.lib.sh  pending-promotes.sh  promote.sh  template-skill.sh  verify-install.sh  verify-template-coverage.sh
setup/: bring-up.sh  component-selector.sh  install-backup.sh  install-bin.sh  install-cli.sh  install-deploy.sh  install-memory.sh  install-skills.sh  parameters.example.env  post-install-checks.sh  prompts.sh  render-templates.sh
(+297 files in other folders)
